--- a/index.html
+++ b/index.html
@@ -1,235 +1,267 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>BC Email Draft Generator</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>BC Email Draft Generator</title>
 
-    <style>
-        :root {
-            --nhs-blue: #005EB8;
-            --nhs-light-blue: #0072CE;
-            --nhs-border: #D8DDE0;
-            --nhs-bg: #F0F4F5;
-            --font-main: Arial, sans-serif;
-            --font-mono: "Courier New", monospace;
-        }
+  <style>
+    :root {
+      --nhs-blue: #005EB8;
+      --nhs-light-blue: #0072CE;
+      --nhs-border: #D8DDE0;
+      --nhs-bg: #F0F4F5;
+      --font-main: Arial, Helvetica, sans-serif;
+      --font-mono: "Courier New", ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
+    }
 
-        body {
-            font-family: var(--font-main);
-            margin: 0;
-            background: var(--nhs-bg);
-        }
+    /* Base */
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      font-family: var(--font-main);
+      background: var(--nhs-bg);
+      color: #111;
+      line-height: 1.4;
+    }
 
-        header {
-            background: var(--nhs-blue);
-            color: white;
-            padding: 20px 40px;
-            font-size: 26px;
-            font-weight: bold;
-        }
+    /* Header */
+    header {
+      background: var(--nhs-blue);
+      color: #fff;
+      padding: clamp(14px, 2vw, 20px) clamp(18px, 4vw, 40px);
+      font-weight: 700;
+      font-size: clamp(18px, 2.4vw, 26px);
+    }
 
-        .container {
-            display: flex;
-            padding: 40px;
-            gap: 40px;
-        }
+    /* Responsive grid container */
+    .container {
+      display: grid;
+      grid-template-columns: 1fr 1fr; /* two columns on wider screens */
+      gap: clamp(16px, 3vw, 40px);
+      padding: clamp(16px, 4vw, 40px);
+      align-items: start;
+    }
 
-        .form-section, .email-section {
-            background: white;
-            padding: 20px;
-            border: 1px solid var(--nhs-border);
-            border-radius: 4px;
-        }
+    /* Panels */
+    .panel {
+      background: #fff;
+      border: 1px solid var(--nhs-border);
+      border-radius: 4px;
+      padding: clamp(14px, 2.5vw, 20px);
+      min-width: 0; /* prevents overflow in grid children */
+    }
 
-        .form-section {
-            width: 45%;
-        }
+    /* Add a responsive divider effect:
+       On wide screens, the right panel gets a left border (divider).
+       On small screens, switch to a top border for separation. */
+    .email-section {
+      border-left: 2px solid var(--nhs-border);
+    }
 
-        .email-section {
-            width: 50%;
-            display: flex;
-            flex-direction: column;
-        }
+    .panel h3 {
+      margin: 0 0 10px 0;
+      font-size: clamp(16px, 2vw, 18px);
+    }
 
-        .form-row {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 15px;
-            align-items: center;
-        }
+    /* Form rows: keep label on left, control on right, aligned */
+    .form-row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 12px;
+      margin-bottom: 12px;
+    }
 
-        label {
-            font-weight: bold;
-            flex: 1;
-            margin-right: 10px;
-        }
+    label {
+      font-weight: 700;
+      flex: 1 1 45%;
+      margin-right: 6px;
+    }
 
-        input, select {
-            flex: 1;
-            padding: 6px 8px;
-            border: 1px solid var(--nhs-border);
-            border-radius: 4px;
-            font-size: 14px;
-        }
+    input, select {
+      flex: 1 1 55%;
+      padding: 8px 10px;
+      border: 1px solid var(--nhs-border);
+      border-radius: 4px;
+      font-size: 14px;
+      background: #fff;
+    }
 
-        #emailOutput {
-            border: 1px solid var(--nhs-border);
-            background: #f7f7f7;
-            padding: 15px;
-            white-space: pre;
-            font-family: var(--font-mono);
-            min-height: 300px;
-        }
+    /* Output box */
+    #emailOutput {
+      border: 1px solid var(--nhs-border);
+      background: #f7f7f7;
+      padding: 14px;
+      white-space: pre;        /* preserve spacing for alignment */
+      font-family: var(--font-mono);
+      min-height: 260px;
+      overflow: auto;          /* scroll if content overflows */
+      border-radius: 4px;
+    }
 
-        button {
-            margin-top: 12px;
-            padding: 10px 18px;
-            background: var(--nhs-light-blue);
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 15px;
-            font-weight: bold;
-        }
+    /* Buttons */
+    .button-row {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      margin-top: 12px;
+    }
 
-        button:hover {
-            background: #005FA3;
-        }
+    button {
+      padding: 10px 16px;
+      background: var(--nhs-light-blue);
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 15px;
+      font-weight: 700;
+    }
+    button:hover { background: #005FA3; }
 
-        .button-row {
-            display: flex;
-            gap: 10px;
-        }
+    /* Responsive behavior: stack panels on small screens */
+    @media (max-width: 900px) {
+      .container {
+        grid-template-columns: 1fr; /* single column */
+      }
+      .email-section {
+        border-left: none;               /* remove side divider */
+        border-top: 2px solid var(--nhs-border); /* horizontal divider when stacked */
+      }
+      /* Adjust form row for narrow screens: keep alignment but allow wrapping nicely */
+      .form-row {
+        gap: 10px;
+      }
+      label { flex-basis: 40%; }
+      input, select { flex-basis: 60%; }
+    }
 
-        h3 {
-            margin-bottom: 10px;
-        }
-    </style>
+    /* Very narrow screens: stack label above input if needed */
+    @media (max-width: 520px) {
+      .form-row {
+        flex-direction: column;
+        align-items: stretch;
+      }
+      label { margin-right: 0; }
+      input, select { width: 100%; }
+    }
+  </style>
 </head>
 
 <body>
+  <header>BC Email Draft Generator</header>
 
-<header>BC Email Draft Generator</header>
+  <div class="container">
+    <!-- LEFT: FORM -->
+    <section class="panel form-section">
+      <form id="emailForm" onsubmit="event.preventDefault()">
+        <div class="form-row">
+          <label for="medication">Medication:</label>
+          <input type="text" id="medication" oninput="updateEmail()" />
+        </div>
 
-<div class="container">
+        <div class="form-row">
+          <label for="diagnosis">Diagnosis:</label>
+          <input type="text" id="diagnosis" oninput="updateEmail()" />
+        </div>
 
-    <!-- LEFT SIDE FORM -->
-    <div class="form-section">
-        <form id="emailForm">
+        <div class="form-row">
+          <label for="offLabel">Off-label status:</label>
+          <select id="offLabel" onchange="updateEmail()">
+            <option value="">-- Select --</option>
+            <option>Off-label</option>
+            <option>Not off-label</option>
+          </select>
+        </div>
 
-            <div class="form-row">
-                <label>Medication:</label>
-                <input type="text" id="medication" oninput="updateEmail()">
-            </div>
+        <div class="form-row">
+          <label for="techLevel">Tech Level:</label>
+          <select id="techLevel" onchange="updateEmail()">
+            <option value="">-- Select --</option>
+            <option>Low tech</option>
+            <option>Medium tech</option>
+            <option>High tech</option>
+          </select>
+        </div>
 
-            <div class="form-row">
-                <label>Diagnosis:</label>
-                <input type="text" id="diagnosis" oninput="updateEmail()">
-            </div>
+        <div class="form-row">
+          <label for="serviceArea">NHS Standard Service Area:</label>
+          <select id="serviceArea" onchange="updateEmail()">
+            <option value="">-- Select --</option>
+            <option>Angioedema and other severe allergies (Respiratory)</option>
+            <option>Anti-infectives - Viral Hepatitis</option>
+            <option>Anti-infectives - Viral HIV Anti-retroviral Therapy (ARV)</option>
+            <option>Anti-infectives - Infection Management -  HPAT/OHPAT</option>
+            <option>Blood disorders - Erythropoietin Stimulating Agents (ESA)</option>
+            <option>Blood disorders - iron overload</option>
+            <option>Blood disorders - unclassified</option>
+            <option>Cancer - Oncology and Haematology - Injectable</option>
+            <option>Cancer - Oncology and Haematology - Oral</option>
+            <option>Cardiovascular - Pulmonary Hypertension (PH)(PAH)</option>
+            <option>Cardiovascular - unclassified</option>
+            <option>Clinical Trials - unclassified</option>
+            <option>Endocrine - Fertility</option>
+            <option>Endocrine - Growth Hormone (adults)</option>
+            <option>Endocrine - Growth Hormone (paediatrics)</option>
+            <option>Endocrine - Osteoporosis and bone metabolism</option>
+            <option>Endocrine - Somatostatin analogues</option>
+            <option>Endocrine - unclassified</option>
+            <option>Hepatology - unclassified</option>
+            <option>Immune system - Dermatology (skin)</option>
+            <option>Immune system - Immunosuppression - Transplant</option>
+            <option>Immune system - Inflammatory bowel and related disorders</option>
+            <option>Immune system - Intravenous and Sub-cutaneous Immunoglobulin</option>
+            <option>Immune system - Multiple Sclerosis</option>
+            <option>Immune system - unclassified</option>
+            <option>Musculoskeletal - Rheumatic disease</option>
+            <option>Musculoskeletal - unclassified</option>
+            <option>Nervous system - unclassified</option>
+            <option>Nutrition - enteral, special diets and supplements</option>
+            <option>Nutrition - Enzyme Replacement Therapy (ERT)</option>
+            <option>Nutrition - Home Parenteral Nutrition (HPN)</option>
+            <option>Nutrition - metabolic disorders unclassified including Acute porphyrias</option>
+            <option>Orphan diseases and unlicensed uses - unclassified</option>
+            <option>Parkinson's Disease (PD) and related disorders</option>
+            <option>Psychoses and related disorders</option>
+            <option>Renal and Genito-urinary (GU) -  unclassified</option>
+            <option>Respiratory - Cystic Fibrosis (CF) adults</option>
+            <option>Respiratory - Cystic Fibrosis (CF) paeds</option>
+            <option>Respiratory - Idiopathic Pulmonary Fibrosis (IPF)</option>
+            <option>Respiratory - unclassified</option>
+            <option>Skin - unclassified</option>
+          </select>
+        </div>
 
-            <div class="form-row">
-                <label>Off-label status:</label>
-                <select id="offLabel" onchange="updateEmail()">
-                    <option value="">-- Select --</option>
-                    <option>Off-label</option>
-                    <option>Not off-label</option>
-                </select>
-            </div>
+        <div class="form-row">
+          <label for="hospitalAccount">Hospital account number CT:</label>
+          <input type="text" id="hospitalAccount" oninput="updateEmail()" />
+        </div>
 
-            <div class="form-row">
-                <label>Tech Level:</label>
-                <select id="techLevel" onchange="updateEmail()">
-                    <option value="">-- Select --</option>
-                    <option>Low tech</option>
-                    <option>Medium tech</option>
-                    <option>High tech</option>
-                </select>
-            </div>
-
-            <div class="form-row">
-                <label>NHS Standard Service Area:</label>
-                <select id="serviceArea" onchange="updateEmail()">
-                    <option value="">-- Select --</option>
-
-                    <!-- Inserted NHS Standard Service Area Options -->
-                    <option>Angioedema and other severe allergies (Respiratory)</option>
-                    <option>Anti-infectives - Viral Hepatitis</option>
-                    <option>Anti-infectives - Viral HIV Anti-retroviral Therapy (ARV)</option>
-                    <option>Anti-infectives - Infection Management -  HPAT/OHPAT</option>
-                    <option>Blood disorders - Erythropoietin Stimulating Agents (ESA)</option>
-                    <option>Blood disorders - iron overload</option>
-                    <option>Blood disorders - unclassified</option>
-                    <option>Cancer - Oncology and Haematology - Injectable</option>
-                    <option>Cancer - Oncology and Haematology - Oral</option>
-                    <option>Cardiovascular - Pulmonary Hypertension (PH)(PAH)</option>
-                    <option>Cardiovascular - unclassified</option>
-                    <option>Clinical Trials - unclassified</option>
-                    <option>Endocrine - Fertility</option>
-                    <option>Endocrine - Growth Hormone (adults)</option>
-                    <option>Endocrine - Growth Hormone (paediatrics)</option>
-                    <option>Endocrine - Osteoporosis and bone metabolism</option>
-                    <option>Endocrine - Somatostatin analogues</option>
-                    <option>Endocrine - unclassified</option>
-                    <option>Hepatology - unclassified</option>
-                    <option>Immune system - Dermatology (skin)</option>
-                    <option>Immune system - Immunosuppression - Transplant</option>
-                    <option>Immune system - Inflammatory bowel and related disorders</option>
-                    <option>Immune system - Intravenous and Sub-cutaneous Immunoglobulin</option>
-                    <option>Immune system - Multiple Sclerosis</option>
-                    <option>Immune system - unclassified</option>
-                    <option>Musculoskeletal - Rheumatic disease</option>
-                    <option>Musculoskeletal - unclassified</option>
-                    <option>Nervous system - unclassified</option>
-                    <option>Nutrition - enteral, special diets and supplements</option>
-                    <option>Nutrition - Enzyme Replacement Therapy (ERT)</option>
-                    <option>Nutrition - Home Parenteral Nutrition (HPN)</option>
-                    <option>Nutrition - metabolic disorders unclassified including Acute porphyrias</option>
-                    <option>Orphan diseases and unlicensed uses - unclassified</option>
-                    <option>Parkinson's Disease (PD) and related disorders</option>
-                    <option>Psychoses and related disorders</option>
-                    <option>Renal and Genito-urinary (GU) -  unclassified</option>
-                    <option>Respiratory - Cystic Fibrosis (CF) adults</option>
-                    <option>Respiratory - Cystic Fibrosis (CF) paeds</option>
-                    <option>Respiratory - Idiopathic Pulmonary Fibrosis (IPF)</option>
-                    <option>Respiratory - unclassified</option>
-                    <option>Skin - unclassified</option>
-                </select>
-            </div>
-
-            <div class="form-row">
-                <label>Hospital account number CT:</label>
-                <input type="text" id="hospitalAccount" oninput="updateEmail()">
-            </div>
-
-            <div class="form-row">
-                <label>Patient account number CT:</label>
-                <input type="text" id="patientAccount" oninput="updateEmail()">
-            </div>
-
-        </form>
-
-        <!-- Reset button -->
-        <button onclick="resetForm()">Reset Form</button>
-    </div>
-
-    <!-- RIGHT SIDE OUTPUT -->
-    <div class="email-section">
-        <h3>Generated Email Draft:</h3>
-
-        <div id="emailOutput">
-            Your email draft will appear here...
+        <div class="form-row">
+          <label for="patientAccount">Patient account number CT:</label>
+          <input type="text" id="patientAccount" oninput="updateEmail()" />
         </div>
 
         <div class="button-row">
-            <button onclick="copyEmail()">Copy to Clipboard</button>
+          <button type="button" onclick="resetForm()">Reset Form</button>
         </div>
-    </div>
+      </form>
+    </section>
 
-</div>
+    <!-- RIGHT: OUTPUT -->
+    <section class="panel email-section">
+      <h3>Generated Email Draft:</h3>
+      <div id="emailOutput">Your email draft will appear here...</div>
+      <div class="button-row">
+        <button type="button" onclick="copyEmail()">Copy to Clipboard</button>
+      </div>
+    </section>
+  </div>
 
-<script>
-function updateEmail() {
-    const fields = {
+  <script>
+    function updateEmail() {
+      const fields = {
         "Medication": document.getElementById("medication").value,
         "Diagnosis": document.getElementById("diagnosis").value,
         "Whether it is off-label or not": document.getElementById("offLabel").value,
@@ -237,35 +269,35 @@ function updateEmail() {
         "The NHS Standard Service area": document.getElementById("serviceArea").value,
         "Hospital account number CT": document.getElementById("hospitalAccount").value,
         "Patient account number CT": document.getElementById("patientAccount").value
-    };
+      };
 
-    // Determine longest label for alignment
-    const longest = Math.max(...Object.keys(fields).map(k => k.length));
+      // Determine longest label for aligned output
+      const longest = Math.max(...Object.keys(fields).map(k => k.length));
 
-    let email =
+      let email =
 `Dear team,
 
-Can you kindly add the following to BC;\n`;
+Can you kindly add the following to BC;
+`;
 
-    for (const [label, value] of Object.entries(fields)) {
+      for (const [label, value] of Object.entries(fields)) {
         email += `• ${label.padEnd(longest)}: ${value}\n`;
+      }
+
+      document.getElementById("emailOutput").textContent = email;
     }
 
-    document.getElementById("emailOutput").textContent = email;
-}
-
-function copyEmail() {
-    const text = document.getElementById("emailOutput").textContent;
-    navigator.clipboard.writeText(text).then(() => {
+    function copyEmail() {
+      const text = document.getElementById("emailOutput").textContent;
+      navigator.clipboard.writeText(text).then(() => {
         alert("Email copied to clipboard!");
-    });
-}
+      });
+    }
 
-function resetForm() {
-    document.getElementById("emailForm").reset();
-    document.getElementById("emailOutput").textContent = "Your email draft will appear here...";
-}
-</script>
-
+    function resetForm() {
+      document.getElementById("emailForm").reset();
+      document.getElementById("emailOutput").textContent = "Your email draft will appear here...";
+    }
+  </script>
 </body>
 </html>
